--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -136,6 +136,9 @@
 		.portfolio-category .row div{
 			margin-top: 40px;
 		}
+		#single-product-banner img, .about-banner img{
+			width: 90%;
+		}
 	}
 
 	@media only screen and ( min-width:768px) and ( max-width:960px ){
