--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,12 @@ URL: https://github.com/superbestdev/printontotheme
 	body, html{
 		font-family: 'Roboto-Light';
 	}
-
+	.float-right{
+		float: right;
+	}
+	.float-left{
+		float: left;
+	}
 	/*---- preloader */
 	.spn_hol {
 	    position: fixed;
@@ -656,18 +661,18 @@ URL: https://github.com/superbestdev/printontotheme
 		font-family: 'HUBERTJOCHAMSusa-Regular';
 		color: #1abc9c;
 	}
-	#ourwork table{
+	table{
 		border-collapse: initial;
 		border-spacing: 0.5em;
 		margin: 50px auto;
 	}
-	#ourwork table img{
+	table img{
 		width: 100%;		
 		opacity: .5;
 		transition: all 0.2s ease-in-out;
 		-webkit-transition: all 0.9s ease;
 	}
-	#ourwork table td{
+	table td{
 		position: relative;
 		background: #000;
 		overflow: hidden;
@@ -683,7 +688,7 @@ URL: https://github.com/superbestdev/printontotheme
 		left: calc(50% - 75px);
 		pointer-events: none;
 	}
-	#ourwork table img:hover{
+	table img:hover{
 		opacity: 1;
 		cursor: pointer;
 		transform: scale(1.3);
@@ -944,6 +949,99 @@ URL: https://github.com/superbestdev/printontotheme
 		font-size: 26px;
 	}
 /* about page---*/
+	
+
+/*-- single product*/
+	#single-product-banner{
+		padding-top: 65px;
+		background-color: #f39c12;
+		text-align: center;
+		color: #fff;
+		overflow: hidden;
+	}
+	#single-product-banner h1{
+		font-family: 'Roboto-Bold';
+		font-size: 36px;
+	}
+	#single-product-banner p{
+		font-family: 'Roboto-MediumItalic';
+		font-size: 16px;
+	}
+	#single-product-banner img{
+		box-shadow: -5px 10px 10px 5px rgba(0, 0, 0, .3);
+		width: 60%;
+	}
+	#simple{
+		padding: 80px 0;
+		text-align: center;
+	}
+	#simple h1{
+		font-family: 'HUBERTJOCHAMSusa-Regular';
+		font-size: 34px;
+		color: #f39c12;
+		margin-bottom: 50px;
+	}
+	#simple .simple-number{
+		font-family: 'Roboto-Black';
+		font-size: 60px;
+		color: #dcddde;
+		padding-right: 1%;
+	}
+	#simple .row .float-right{
+		width: 85%;
+		padding: 3%;
+	}
+	#simple .row .float-right h3{
+		font-family: 'RobotoSlab-Regular';
+		font-size: 20px;
+		text-align: left;
+	}
+	#simple .row .float-right p{
+		color: #656d78;
+		text-align: left;
+	}
+	#product-gallery{
+		padding: 75px 0;
+		text-align: center;
+	}
+	#product-gallery h2{
+		font-family: 'Roboto-Bold';
+		font-size: 30px;
+		color: #f39c12;
+	}
+	#product-gallery h4{
+		color: #2e3336;
+		font-size: 18px;
+	}
+	.gallery-pagination{
+		text-align: center;
+	}
+	.gallery-pagination li{
+		display: inline-flex;
+		margin: 5px;	
+	}
+	.gallery-pagination li a{
+		width: 15px;
+		height: 15px;
+		background: #2d3e50;
+		display: block;	
+	}
+	.gallery-pagination .first{
+		opacity: 1;
+	}
+	.gallery-pagination .second{
+		opacity: .8;
+	}
+	.gallery-pagination .third{
+		opacity: .6;
+	}
+	.gallery-pagination .forth{
+		opacity: .4;
+	}
+	.gallery-pagination .fifth{
+		opacity: .2;
+	}
+/* single product---*/
 
 
 
