complete customer order

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -171,7 +171,11 @@
 			width: initial;
 		}
 	}
-
+	@media only screen and ( min-width:768px) and ( max-width:980px ){
+		.progress-div{
+			border: none;
+		}
+	}
 	@media only screen and ( min-width:768px) and ( max-width:960px ){
 		.flex-inner {
 		    max-width:700px !important;
@@ -292,19 +296,11 @@
 		}
 
 	}
-	@media only screen and (min-width: 599px) and (max-width: 767px){
-		.order-progress {
-		    width: 20vw;
-		    height: 20vw;
-		}
-	}
+	
 
 	@media only screen and ( min-width: 320px) and ( max-width: 599px ){
 
-		.order-progress {
-		    width: 30vw;
-		    height: 30vw;
-		}
+		
 		.progress-div{
 			border: none;
 		}
