--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -668,23 +668,23 @@ URL: https://github.com/superbestdev/printontotheme
 		font-family: 'HUBERTJOCHAMSusa-Regular';
 		color: #1abc9c;
 	}
-	table{
+	table.gallery-table{
 		border-collapse: initial;
 		border-spacing: 0.5em;
 		margin: 50px auto;
 	}
-	table img{
+	table.gallery-table img{
 		width: 100%;		
 		opacity: .5;
 		transition: all 0.2s ease-in-out;
 		-webkit-transition: all 0.9s ease;
 	}
-	table td{
+	table.gallery-table td{
 		position: relative;
 		background: #000;
 		overflow: hidden;
 	}
-	table .mask{
+	table.gallery-table .mask{
 		position: absolute;
 		top: calc(50% - 25px);
 		color: #fff;
@@ -695,7 +695,7 @@ URL: https://github.com/superbestdev/printontotheme
 		left: calc(50% - 75px);
 		pointer-events: none;
 	}
-	table img:hover{
+	table.gallery-table img:hover{
 		opacity: 1;
 		cursor: pointer;
 		transform: scale(1.3);
@@ -1525,59 +1525,16 @@ URL: https://github.com/superbestdev/printontotheme
 	.customer-order p{
 		font-size: 16px;
 		color: #808080;
+		margin-bottom: 0;
 	}
 	.customer-order img{
 		width: 100%;
-		margin: 10% 0;
+		margin: 15% 0;
 	}
 	.progress-div{
 		border-left: 1px solid rgba(0, 0, 0, .2);
 		padding: 0 20px;
-	}
-	.order-progress{
-		width: 7vw;
-		height: 7vw;
-		border:solid 12px #1bc98e;
-		border-radius:50%;
-		position:relative;
-		transform:rotate(45deg);
-		display: inline-block;
-	}
-	div.order-progress:before,div.order-progress:after {
-		content:'';
-		position:absolute;
-		top:-12px;
-		left:-12px;
-		border:solid 12px transparent;
-		height:inherit;
-		width:inherit;
-		border-radius:inherit;
-		box-shadow: 0 0 1px 1px #fff;
-	}
-	.c30, .c40, .c50 {
-		border-top-color:#1ca8dd;
-		border-right-color:#1ca8dd;
-	}
-	.c30:before {
-		border-right-color:#1bc98e !important;
-		transform:rotate(18deg);
-	}
-	.c40:before {
-		border-top-color:#1bc98e !important;
-		transform:rotate(144deg);
-	}
-	.c80 {
-		border-color:#1ca8dd !important;
-		border-left-color:#1bc98e !important;
-	}
-	.c80:before {
-		border-bottom-color:#1ca8dd !important;
-		transform:rotate(18deg);
-	}
-	.progress-percent{
-		font-size: 12px !important;
-		margin-bottom: 0;
-	}
+	}	
 	.customer-order-menu{
 		margin: 20px 0;
 		color: rgba(0,0,0,.3);
@@ -1612,6 +1569,27 @@ URL: https://github.com/superbestdev/printontotheme
 /*--- customer order */
 	.order-detail{
 		text-align: center;
+	}
+	.order-detail table{
+		text-align: left;
+		margin: 10px 0;
+	}
+	.order-operation{
+		margin: 20px 0;
+	}
+	.order-operation a{
+		font-size: 14px;
+		padding: 10px 20px;
+		margin: 0 5px;
+	}
+	.order-name{
+		font-family: 'Roboto-Bold';
+		color: #1abc9c;
+	}
+	.order-number{
+		color: #808080;
+		font-weight: 600;
+		text-indent: 25px;
 	}
 /* customer order----*/
 
