--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1580,7 +1580,7 @@ URL: https://github.com/superbestdev/printontotheme
 	.order-operation a{
 		font-size: 14px;
 		padding: 10px 20px;
-		margin: 0 5px;
+		margin: 5px;
 	}
 	.order-name{
 		font-family: 'Roboto-Bold';
