--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -606,6 +606,9 @@ URL: https://github.com/superbestdev/printontotheme
 		-moz-animation-duration: 3s;
 		-moz-animation-delay: 3s;
 		-moz-animation-iteration-count: infinite;
+		animation-duration: 3s;
+		animation-delay: 3s;
+		animation-iteration-count: infinite;
 		animation-timing-function: linear;
 	}
 	img.progress-arrow{
