--- a/admin/docs/assets/css/application.css
+++ b/admin/docs/assets/css/application.css
@@ -57,9 +57,9 @@ a.custom-last span{
   overflow: hidden;
 }
 .product-preview-img{
-  width: 200px;
+  width: 40%;
   position: absolute;
-  top: calc(50% - 180px);
-  left: calc(50% - 100px);
+  top: 10%;
+  left: 30%;
   z-index: 1;
 }
