--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -30,8 +30,9 @@ section{
 }
 
 .text-div h5{
-	font-size: 24px;
-    padding-bottom: 24px;
+	font-size: 15px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
     border-bottom: 2px solid #1e22aa;
     display: inline-block;
     /*font-family: 'Muli';*/
@@ -41,19 +42,23 @@ section{
 .text-div p{
 	/*font-family: 'HelveticaNeueLTStd';*/
 	font-family: 'Roboto';
-	font-size: 40px;
+	font-size: 30px;
 	color: #666666;
 	line-height: 1.3;
 }
 section#features3{
 	padding: 0;
 }
+.mark-img{	
+    width: 25vw;
+    margin-bottom: -12vw;
+}
 
 section#features3 .mark-img{
-	margin-bottom: -250px;
-	margin-top: -250px;
-	z-index: 10;
-	margin-left: 4%;
+	margin-top: -10vw;
+    z-index: 10;
+    margin-left: 4%;
+    position: absolute;
 }
 
 section#features5{
@@ -71,7 +76,45 @@ section#features6{
 	margin-right: 5vw;
 	background: #fff;
 }
+.services{
+	color: #666;
+	background: #fff;
+	z-index: 5;
+	position: relative;
+}
 
+.services div{
+	padding: 5vw;
+}
+
+.services h5{
+	font-size: 15px;
+	line-height: 1.5;
+}
+
+.services h5.text-underline{
+	border-bottom: 2px solid #1e22aa;
+	padding-bottom: 30px;
+	display: inline-block;
+}
+
+.services p{
+	font-size: 30px;
+	font-family: Roboto;
+	line-height: 1.3;
+}
+
+#features8{
+	background-color: #1e22aa;
+	margin-right: 10vw;
+	margin-top: -10vw;
+	padding-top: 10vw;
+}
+
+#features8 img{
+	position: relative;
+	right: -10vw;
+}
 
 
 
