--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -8,6 +8,10 @@
 
 @import url('https://fonts.googleapis.com/css?family=Muli');
 
+#features-title h1{
+	color: #1e22aa;
+	font-family: Roboto;
+}
 
 section#features1{
 	background-image: url('../img/features/features/features-1.png');
@@ -116,7 +120,65 @@ section#features6{
 	right: -10vw;
 }
 
+@media (max-width: 991px){
+	section{
+		padding: 5vw 0;
+	}
 
+	section#features1{
+		padding: 30vw 0;
+	}
+
+	.text-div h5{
+		font-size: 15px;
+	    padding-bottom: 0;
+	    margin-bottom: 30px;
+	    color: #1e22aa;
+		border: none;
+	}
+
+	.text-div p{
+		font-size: 20px;
+	}
+
+	.services h5.text-underline{
+		padding-bottom: 0;
+	    margin-bottom: 30px;
+	    color: #1e22aa;
+		border: none;
+	}
+
+	.services p{
+		font-size: 20px;
+		font-family: Roboto;
+		line-height: 1.3;
+	}
+
+	.mark-img{
+		display: none;
+	}
+
+	section#features6{
+		margin: 0;
+	}
+
+	#features8{
+		margin: 0;
+	}
+
+	#features8 img{
+		position: initial;
+	}
+
+	#features9{
+		background: #1e22aa;
+		color: #fff;
+	}
+
+	#features9 .text-div h5, #features9 .text-div p{
+		color: #fff;
+	} 
+}
 
 
 
