make tagline bolder...

--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -23,6 +23,7 @@ section#features1 h1{
 	font-family: "Helvetica Neue LT Std", Helvetica, arial;
 	font-size: 80px;
 	color: #fff;
+	font-weight: bold;
 }
 
 section{
