--- a/assets/css/residences.css
+++ b/assets/css/residences.css
@@ -17,6 +17,7 @@ section#residences1 h1{
 	font-family: "Helvetica Neue LT Std", Helvetica, arial;
 	font-size: 80px;
 	color: #fff;
+	font-weight: bold;
 }
 
 section{
